--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   </head>
   <body>
     <!-- barre d'entête -->
-    <div id="top-bar" class="py-3">
+    <div id="top-bar" class="py-3 border">
         <div class="container-fluid d-flex justify-content-between align-items-center">
-            <div id="flash-infos" class="border rounded border-black p-2">
+            <div id="flash-infos" class="border rounded p-2">
                 <span class="px-2">Bloc des Flash info en bande circulante</span>
             </div>
 
@@ -34,7 +34,7 @@
     </div>
 
     <!-- section d'entête -->
-    <header>
+    <header class="border">
         <div class="container-fluid">
             <div id="banner" class="d-flex justify-content-between align-items-center">
                 <img src="assets/img/logo.jpg" class="img-fluid" alt="Logo AfricaPost">
@@ -42,7 +42,7 @@
                 <img src="assets/img/carte_afrique.png" class="img-fluid" alt="Carte d'Afrique">
             </div>
 
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light border">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbarToggler" aria-expanded="false">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -84,14 +84,14 @@
     </header>
 
     <!-- image d'entête -->
-    <div id="header-img" class="container">
+    <div id="header-img" class="container border">
         <img src="https://via.placeholder.com/1000x300" class="img-fluid" alt="">
     </div>
 
     <!-- ligne de blocs -->
     <section class="container mt-5">
         <div class="row">
-            <div class="col-8">
+            <div class="col-8 border">
                 <h1>A la une</h1>
 
                 <div class="row">
@@ -116,7 +116,7 @@
                 </p>
             </div>
 
-            <div class="col-4">
+            <div class="col-4 border">
                 <ul class="nav nav-tabs" id="myTab" role="tablist">
                     <li class="nav-item">
                         <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">+ récents</a>
@@ -188,7 +188,7 @@
     <!-- ligne de blocs -->
     <section class="container mt-5">
         <div class="row">
-            <div class="col">
+            <div class="col border">
                 <h5>Titre et petite description</h5>
 
                 <div class="d-flex align-items-center mt-3">
@@ -206,7 +206,7 @@
                 </div>
             </div>
 
-            <div class="col">
+            <div class="col border">
                 <h5>Titre et petite description</h5>
 
                 <div class="d-flex align-items-center mt-3">
@@ -224,7 +224,7 @@
                 </div>
             </div>
 
-            <div class="col">
+            <div class="col border">
                 <h5>Post TV</h5>
                 
                 <div class="row">
@@ -237,19 +237,19 @@
     <!-- ligne de blocs -->
     <section class="container mt-5">
         <div class="row">
-            <div class="col-8">
+            <div class="col-8 border">
                 <div class="row">
                     <h5 class="pb-5">BLOC</h5>
                 </div>
 
                 <div class="row">
-                    <div class="col">
+                    <div class="col border">
                         <h5>Titre et petite description</h5>
                         <img src="https://via.placeholder.com/1000x500" class="img-fluid mt-3" alt="">
                         <p mt-3>Lorem ipsum dolor sit amet consectetur, adipisicing elit...</p mt-3>
                     </div>
 
-                    <div class="col">
+                    <div class="col border">
                         <h5>Titre et petite description</h5>
                         <img src="https://via.placeholder.com/1000x500" class="img-fluid mt-3" alt="">
                         <p mt-3>Lorem ipsum dolor sit amet consectetur, adipisicing elit...</p mt-3>
@@ -257,7 +257,7 @@
                 </div>
             </div>
 
-            <div class="col-4">
+            <div class="col-4 border">
                 <h5>Agenda national</h5>
                 <h5 class="mt-5">Agenda international</h5>
             </div>
@@ -265,7 +265,7 @@
     </section>
 
     <!-- ligne de blocs -->
-    <section class="container mt-5">
+    <section class="container mt-5 border">
         <h1 class="mb-3">Image à la une</h1>
 
         <div class="row">
@@ -290,26 +290,26 @@
      <!-- ligne de blocs -->
      <section class="container mt-5">
         <div class="row">
-            <div class="col-4">
+            <div class="col-4 border">
                 <h5>Agenda national</h5>
             </div>
 
-            <div class="col-8">
+            <div class="col-8 border">
                 <div class="row">
-                    <div class="col">
+                    <div class="col border">
                         <h5>Titre et petite description</h5>
                         <img src="https://via.placeholder.com/1000x500" class="img-fluid mt-3" alt="">
                         <p mt-3>Lorem ipsum dolor sit amet consectetur, adipisicing elit...</p mt-3>
                     </div>
 
-                    <div class="col">
+                    <div class="col border">
                         <h5>Titre et petite description</h5>
                         <img src="https://via.placeholder.com/1000x500" class="img-fluid mt-3" alt="">
                         <p mt-3>Lorem ipsum dolor sit amet consectetur, adipisicing elit...</p mt-3>
                     </div>
                 </div>
 
-                <div class="row">
+                <div class="row border">
                     <h5 class="pb-5">BLOC</h5>
                 </div>
             </div>
@@ -317,7 +317,7 @@
     </section>
 
     <!-- section de newsletter -->
-    <section class="container mt-5">
+    <section class="container mt-5 border">
         <form class="form-inline">
             <input class="form-control w-75" type="email" placeholder="Recevez chaque jour les titres à la Une">
             <button class="btn btn-success ml-2" type="submit">Je m'inscris</button>
