--- a/single.html
+++ b/single.html
@@ -87,38 +87,93 @@
         </div>
     </header>
 
-    <!-- image d'entête -->
-    <div id="header-img" class="container mt-5">
-        <img src="https://via.placeholder.com/1000x300" class="img-fluid" alt="">
-    </div>
-
-    <!-- ligne de blocs -->
+    <!-- bloc d'article -->
     <section class="container mt-5">
         <div class="row">
             <div class="col-8">
                 <div class="p-3 border border-dark rounded">
-                    <h1>A la une</h1>
+                    <a href=""><h4 class="mt-3">Titre de l'actualité</h4></a>
+
+                    <img src="https://via.placeholder.com/1000x500" class="img-fluid mt-3" alt="">
 
                     <div class="row">
-                        <div class="col-9">
-                            <img src="https://via.placeholder.com/1000x500" class="img-fluid" alt="">
+                        <div class="col">
+                            <img src="https://via.placeholder.com/250x200" class="img-fluid mt-3" alt="">
                         </div>
-
-                        <div class="col-3 d-flex flex-column">
-                            <img src="https://via.placeholder.com/100x125" class="img-fluid mb-2" alt="">
-                            <img src="https://via.placeholder.com/100x125" class="img-fluid" alt="">
+                        <div class="col">
+                            <img src="https://via.placeholder.com/250x200" class="img-fluid mt-3" alt="">
+                        </div>
+                        <div class="col">
+                            <img src="https://via.placeholder.com/250x200" class="img-fluid mt-3" alt="">
                         </div>
                     </div>
 
-                    <h2 class="my-3">
-                        <a href="">Titre de l'actualité</a>
-                    </h2>
+                    <p class="mt-3">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos nostrum delectus 
+                        dicta amet, molestias ducimus ratione officiis autem qui sed dolore a nihil illum 
+                        voluptatem quas laboriosam blanditiis maiores repellat, accusantium velit 
+                        recusandae rem est aspernatur. Repellat magni labore quibusdam, quas eveniet 
+                        alias, illum harum cum neque mollitia amet? Obcaecati?
+                    </p>
 
                     <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et dolorum reiciendis 
-                        nam, quaerat ipsam unde vero temporibus ab voluptas hic suscipit dolor provident 
-                        amet reprehenderit beatae quod! Dicta, beatae eaque...
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos nostrum delectus 
+                        dicta amet, molestias ducimus ratione officiis autem qui sed dolore a nihil illum 
+                        voluptatem quas laboriosam blanditiis maiores repellat, accusantium velit 
+                        recusandae rem est aspernatur. Repellat magni labore quibusdam, quas eveniet 
+                        alias, illum harum cum neque mollitia amet? Obcaecati?
                     </p>
+
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos nostrum delectus 
+                        dicta amet, molestias ducimus ratione officiis autem qui sed dolore a nihil illum 
+                        voluptatem quas laboriosam blanditiis maiores repellat, accusantium velit 
+                        recusandae rem est aspernatur. Repellat magni labore quibusdam, quas eveniet 
+                        alias, illum harum cum neque mollitia amet? Obcaecati?
+                    </p>
+
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos nostrum delectus 
+                        dicta amet, molestias ducimus ratione officiis autem qui sed dolore a nihil illum 
+                        voluptatem quas laboriosam blanditiis maiores repellat, accusantium velit 
+                        recusandae rem est aspernatur. Repellat magni labore quibusdam, quas eveniet 
+                        alias, illum harum cum neque mollitia amet? Obcaecati?
+                    </p>
+
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos nostrum delectus 
+                        dicta amet, molestias ducimus ratione officiis autem qui sed dolore a nihil illum 
+                        voluptatem quas laboriosam blanditiis maiores repellat, accusantium velit 
+                        recusandae rem est aspernatur. Repellat magni labore quibusdam, quas eveniet 
+                        alias, illum harum cum neque mollitia amet? Obcaecati?
+                    </p>
+
+                    <div class="my-3 d-flex align-items-center justify-content-between">
+                        <button class="btn btn-primary">Commentaires</button>
+                        <div>
+                            <button class="btn btn-primary">Partager</button>
+
+                            <button class="btn btn-primary">
+                                <li class="fa fa-facebook"></li>
+                            </button>
+
+                            <button class="btn btn-primary">
+                                <li class="fa fa-google-plus"></li>
+                            </button>
+
+                            <button class="btn btn-primary">
+                                <li class="fa fa-twitter"></li>
+                            </button>
+
+                            <button class="btn btn-primary">
+                                <li class="fa fa-linkedin"></li>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="mt-3 p-3 border border-dark rounded">
+                    <h5 class="pb-5">BLOC</h5>
                 </div>
             </div>
 
@@ -189,95 +244,13 @@
                         <span style="font-size: 1.5em;">Artiles</span>
                     </div>
                 </div>
-            </div>
-        </div>
-    </section>
 
-    <!-- ligne de blocs -->
-    <section class="container mt-5">
-        <div class="row">
-            <div class="col">
-                <div class="p-3 border border-dark rounded">
-                    <h5>Titre et petite description</h5>
-
-                    <div class="d-flex align-items-center mt-3">
-                        <img src="https://via.placeholder.com/200" class="img-fluid" alt="">
-                        <p class="ml-3">
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit...
-                        </p>
-                    </div>
-
-                    <div class="d-flex align-items-center mt-3">
-                        <img src="https://via.placeholder.com/200" class="img-fluid" alt="">
-                        <p class="ml-3">
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit...
-                        </p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col">
-                <div class="p-3 border border-dark rounded">
-                    <h5>Titre et petite description</h5>
-
-                    <div class="d-flex align-items-center mt-3">
-                        <img src="https://via.placeholder.com/200" class="img-fluid" alt="">
-                        <p class="ml-3">
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit...
-                        </p>
-                    </div>
-
-                    <div class="d-flex align-items-center mt-3">
-                        <img src="https://via.placeholder.com/200" class="img-fluid" alt="">
-                        <p class="ml-3">
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit...
-                        </p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col">
-                <div class="p-3 border border-dark rounded">
+                <div class="mt-3 p-3 border border-dark rounded">
                     <h5>Post TV</h5>
                     <iframe height="220" src="https://www.youtube.com/embed/tgbNymZ7vqY?controls=0"></iframe>
                 </div>
-            </div>
-        </div>
-    </section>
 
-    <!-- ligne de blocs -->
-    <section class="container mt-5">
-        <div class="row">
-            <div class="col-8">
-                <div class="row mb-3">
-                    <div class="col">
-                        <div class="p-3 border border-dark rounded">
-                            <h5 class="pb-5">BLOC</h5>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col">
-                        <div class="p-3 border border-dark rounded">
-                            <h5>Titre et petite description</h5>
-                            <img src="https://via.placeholder.com/1000x500" class="img-fluid mt-3" alt="">
-                            <p class="mt-3">Lorem ipsum dolor sit amet consectetur, adipisicing elit...</p>
-                        </div>
-                    </div>
-
-                    <div class="col">
-                        <div class="p-3 border border-dark rounded">
-                            <h5>Titre et petite description</h5>
-                            <img src="https://via.placeholder.com/1000x500" class="img-fluid mt-3" alt="">
-                            <p class="mt-3">Lorem ipsum dolor sit amet consectetur, adipisicing elit...</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-4">
-                <div class="p-3 border border-dark rounded">
+                <div class="mt-3 p-3 border border-dark rounded">
                     <h5>Agenda national</h5>
                     <h5 class="mt-5">Agenda international</h5>
                 </div>
@@ -285,77 +258,10 @@
         </div>
     </section>
 
-    <!-- ligne de blocs -->
-    <section class="container mt-5">
-        <div class="p-3 border border-dark rounded">
-            <h1 class="mb-3">Image à la une</h1>
-
-            <div class="row">
-                <div class="col">
-                    <img src="https://via.placeholder.com/250" class="img-fluid mt-3" alt="">
-                </div>
-                <div class="col">
-                    <img src="https://via.placeholder.com/250" class="img-fluid mt-3" alt="">
-                </div>
-                <div class="col">
-                    <img src="https://via.placeholder.com/250" class="img-fluid mt-3" alt="">
-                </div>
-                <div class="col">
-                    <img src="https://via.placeholder.com/250" class="img-fluid mt-3" alt="">
-                </div>
-                <div class="col">
-                    <img src="https://via.placeholder.com/250" class="img-fluid mt-3" alt="">
-                </div>
-            </div>
-        </div>
-    </section>
-
-     <!-- ligne de blocs -->
-     <section class="container mt-5">
-        <div class="row">
-            <div class="col-4">
-                <div class="p-3 border border-dark rounded">
-                    <h5>Agenda national</h5>
-                </div>
-            </div>
-
-            <div class="col-8">
-                <div class="row">
-                    <div class="col">
-                        <div class="p-3 border border-dark rounded">
-                            <h5>Titre et petite description</h5>
-                            <img src="https://via.placeholder.com/1000x500" class="img-fluid mt-3" alt="">
-                            <p class="mt-3">Lorem ipsum dolor sit amet consectetur, adipisicing elit...</p>
-                        </div>
-                    </div>
-
-                    <div class="col">
-                        <div class="p-3 border border-dark rounded">
-                            <h5>Titre et petite description</h5>
-                            <img src="https://via.placeholder.com/1000x500" class="img-fluid mt-3" alt="">
-                            <p class="mt-3">Lorem ipsum dolor sit amet consectetur, adipisicing elit...</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row mt-3">
-                    <div class="col">
-                        <div class="p-3 border border-dark rounded">
-                            <h5 class="pb-5">BLOC</h5>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- section newsletter -->
-    <section class="container mt-5">
-        <form class="form-inline">
-            <input class="form-control w-75" type="email" placeholder="Recevez chaque jour les titres à la Une">
-            <button class="btn btn-success ml-2" type="submit">Je m'inscris</button>
-        </form>
-    </section>
+    <!-- image d'entête -->
+    <div id="header-img" class="container my-5">
+        <img src="https://via.placeholder.com/1000x300" class="img-fluid" alt="">
+    </div>
 
     <footer class="mt-3 py-5">
         <div class="container">
